@@ -1,7 +1,5 @@
 xml import tests
 
-Nils Barth latin patch
-
 add hooks before display
 
 merge Konrad OSX patches + start time patches + protect patches
